; ModuleID = '/home/carl/AnghaBench/openvpn/src/plugins/down-root/extr_down-root.c_set_signals.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/plugins/down-root/extr_down-root.c_set_signals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGTERM = common dso_local global i32 0, align 4
@SIG_DFL = common dso_local global i32 0, align 4
@SIGINT = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@SIGHUP = common dso_local global i32 0, align 4
@SIGUSR1 = common dso_local global i32 0, align 4
@SIGUSR2 = common dso_local global i32 0, align 4
@SIGPIPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @set_signals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_signals() #0 {
  %1 = load i32, i32* @SIGTERM, align 4
  %2 = load i32, i32* @SIG_DFL, align 4
  %3 = call i32 @signal(i32 %1, i32 %2)
  %4 = load i32, i32* @SIGINT, align 4
  %5 = load i32, i32* @SIG_IGN, align 4
  %6 = call i32 @signal(i32 %4, i32 %5)
  %7 = load i32, i32* @SIGHUP, align 4
  %8 = load i32, i32* @SIG_IGN, align 4
  %9 = call i32 @signal(i32 %7, i32 %8)
  %10 = load i32, i32* @SIGUSR1, align 4
  %11 = load i32, i32* @SIG_IGN, align 4
  %12 = call i32 @signal(i32 %10, i32 %11)
  %13 = load i32, i32* @SIGUSR2, align 4
  %14 = load i32, i32* @SIG_IGN, align 4
  %15 = call i32 @signal(i32 %13, i32 %14)
  %16 = load i32, i32* @SIGPIPE, align 4
  %17 = load i32, i32* @SIG_IGN, align 4
  %18 = call i32 @signal(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
